# arbitrary-precision-arithmetic

./: .gitignore  1.txt  CMakeLists.txt  Makefile  README.md  arithmetic_helpers.c  arithmetic_helpers.h  convert_from_b_to_d  main  main.c  my_equalizers.c  s21_add.c  s21_add.h  s21_banking_round.c  s21_decimal.h  s21_decimal_utils.c  s21_decimal_utils.h  s21_equalizers.c  s21_is_decimal_correct.c  s21_normalize_scale.c  s21_normalize_scale.h  sandbox  sandbox.c  sandbox.h  strong_mult.c
a_tests/: test.c  test.h
a_tests/arithmetic_test/: 100x_test_s21_add.c  10x_test_s21_add.c  300x_test_s21_add.c  30x_test_s21_add.c  50x_test_s21_add.c  5x_test_s21_add.c
arithmetic_test/: 100x_test_s21_add.c  10x_test_s21_add.c  300x_test_s21_add.c  30x_test_s21_add.c  50x_test_s21_add.c  5x_test_s21_add.c
inc/: arithmetic_helpers.h  my_banking_round.h  s21_add.h  s21_banking_round.h  s21_decimal.h  s21_decimal_utils.h  s21_equalizers.h  s21_is_decimal_correct.h  s21_normalize_scale.h  s21_subfuncs.h
mark_down_files/: README.md  SANDBOX.md  TODO.md
md/: README.md  TODO.md
other_funcs/: arithmetic_helpers.c  my_banking_round.c  s21_banking_round.c  s21_decimal_utils.c  s21_normalize_scale.c  s21_subfuncs.c
python/: binary_len.py  main.py  normalize_test.py
s21_arithmetic/: s21_add.c
src/: Makefile  main.c
src/a_tests/: test.c  test.h
src/a_tests/arithmetic_test/: 100x_test_s21_add.c  10x_test_s21_add.c  300x_test_s21_add.c  300x_test_s21_sub.c  30x_test_s21_add.c  500x_test_s21_add.c  50x_test_s21_add.c  50x_test_s21_sub.c  (+1 more)
src/inc/: s21_arithmetic.h  s21_decimal.h  s21_other_funcs.h  s21_subfuncs.h
src/other_funcs/: arithmetic_helpers.c  my_banking_round.c  s21_normalize_scale.c  s21_other_funcs.c  s21_subfuncs.c
src/s21_arithmetic/: s21_add.c  s21_sub.c
tools/: add.c  convert_from_b_to_d.c  multiply.c  sandbox.c  strong_mult.c
(+8 files in other folders)
